# Hackathon-Todo_App

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  load_test.py  package-lock.json  package.json  pyproject.toml  quick_test.py  test_add_view.py  test_auth_fixes.py  test_authentication.py  test_direct_api.py  test_implementation.py  test_login_endpoint.py
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
backend/: Dockerfile  README.md  alembic.ini  railway.json  requirements.txt  requirements_railway.txt  setup.sh  test_ai_config.py  test_backend.py  test_db_connection.py  test_debug_api.py  test_final.py  test_full_functionality.py  test_main_app.py  test_neon_db.py  todoapp.db
backend/alembic/: env.py
backend/src/: database.py  main.py
backend/tests/: test_e2e_workflow.py  test_security.py  test_task_api.py  test_task_integration.py
components/auth/: auth-form.tsx  password-field.tsx
components/layout/: footer.tsx  header.tsx
docs/: frontend-components.md  release-notes.md  task-api.md  usage.md
frontend/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-fullstack/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ui-design/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-task-crud-enhancement/: data-model.md  (+5 more)
src/: main.py
todo-chatbot/: values.yaml
(+270 files in other folders)
